# tetris-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  flake.nix  justfile
src/: arena.rs  debug.rs  event_demo.rs  freeze.rs  game.rs  image.rs  image_demo.rs  kbd.rs  lib.rs  main.rs  row_density.rs  setup.rs  slice.rs  tetroid.rs
src/tetroid/: components.rs
