[package]
name = "tetris-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "^0.14", features = ["wayland", "dynamic_linking"] }

bevy_prototype_lyon = "^0.12"
bevy_rapier2d = { version = "^0.27" } # features = [ "debug-render-2d" ] }

bevy-inspector-egui = {version =  "^0.25", features = []}
itertools = "^0.13"
bevy_mod_debugdump = "0.11.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
